syntax = "proto3";

package management.v1;

import "google/api/annotations.proto";
import "inventory/v1/agents.proto";
import "inventory/v1/log_level.proto";
import "inventory/v1/services.proto";
import "management/v1/metrics.proto";
import "management/v1/service.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

// Add MongoDB

message AddMongoDBRequest {
  reserved 8; // TODO https://jira.percona.com/browse/PMM-4650
  reserved "query_examples_disabled";

  // Node identifier on which a service is been running.
  // Exactly one of these parameters should be present: node_id, node_name, add_node.
  string node_id = 1;
  // Node name on which a service is been running.
  // Exactly one of these parameters should be present: node_id, node_name, add_node.
  string node_name = 2;
  // Create a new Node with those parameters.
  // Exactly one of these parameters should be present: node_id, node_name, add_node.
  AddNodeParams add_node = 3;
  // Unique across all Services user-defined name. Required.
  string service_name = 4 [(validate.rules).string.min_len = 1];
  // Node and Service access address (DNS name or IP).
  // Address (and port) or socket is required.
  string address = 5;
  // Service Access port.
  // Port is required when the address present.
  uint32 port = 6;
  // Service Access socket.
  // Address (and port) or socket is required.
  string socket = 7;
  // The "pmm-agent" identifier which should run agents. Required.
  string pmm_agent_id = 9 [(validate.rules).string.min_len = 1];
  // Environment name.
  string environment = 10;
  // Cluster name.
  string cluster = 11;
  // Replication set name.
  string replication_set = 12;
  // MongoDB username for exporter and QAN agent access.
  string username = 13;
  // MongoDB password for exporter and QAN agent access.
  string password = 14;
  // If true, adds qan-mongodb-profiler-agent for provided service.
  bool qan_mongodb_profiler = 15;
  // Custom user-assigned labels for Service.
  map<string, string> custom_labels = 16;
  // Skip connection check.
  bool skip_connection_check = 17;
  // Use TLS for database connections.
  bool tls = 19;
  // Skip TLS certificate and hostname validation.
  bool tls_skip_verify = 20;
  // Client certificate and key.
  string tls_certificate_key = 21;
  // Password for decrypting tls_certificate_key.
  string tls_certificate_key_file_password = 22;
  // Certificate Authority certificate chain.
  string tls_ca = 23;
  // Limit query length in QAN (default: server-defined; -1: no limit).
  int32 max_query_length = 24;
  // Defines metrics flow model for this exporter.
  // Metrics could be pushed to the server with vmagent,
  // pulled by the server, or the server could choose behavior automatically.
  MetricsMode metrics_mode = 25;
  // List of collector names to disable in this exporter.
  repeated string disable_collectors = 26;
  // Authentication mechanism.
  // See https://docs.mongodb.com/manual/reference/connection-string/#mongodb-urioption-urioption.authMechanism
  // for details.
  string authentication_mechanism = 27;
  // Authentication database.
  string authentication_database = 28;
  // Custom password for exporter endpoint /metrics.
  string agent_password = 29;
  // List of collections to get stats from. Can use * .
  repeated string stats_collections = 30;
  // Collections limit. Only get Databases and collection stats if the total number of collections in the server
  // is less than this value. 0: no limit
  int32 collections_limit = 31;
  // Enable all collectors
  bool enable_all_collectors = 32;
  // Exporter log level
  inventory.v1.LogLevel log_level = 33;
  // Optionally expose the exporter process on all public interfaces
  bool expose_exporter = 34;
}

message AddMongoDBResponse {
  inventory.v1.MongoDBService service = 1;
  inventory.v1.MongoDBExporter mongodb_exporter = 2;
  inventory.v1.QANMongoDBProfilerAgent qan_mongodb_profiler = 3;
}

// MongoDB service provides public Management API methods for MongoDB Service.
service MongoDBService {
  // AddMongoDB adds MongoDB Service and starts several Agents.
  // It automatically adds a service to inventory, which is running on provided "node_id",
  // then adds "mongodb_exporter", and "qan_mongodb_profiler" agents
  // with provided "pmm_agent_id" and other parameters.
  rpc AddMongoDB(AddMongoDBRequest) returns (AddMongoDBResponse) {
    option (google.api.http) = {
      post: "/v1/management/MongoDB/Add"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Add MongoDB"
      description: "Adds MongoDB Service and starts several Agents. It automatically adds a service to inventory, which is running on the provided \"node_id\", then adds \"mongodb_exporter\", and \"qan_mongodb_profiler\" agents with the provided \"pmm_agent_id\" and other parameters."
    };
  }
}
